Feature/add feature enabled checks and Bug fixes 1.3.1 (#8)
* feat: Add limited enchantment slots feature with feature-enabled checks

* feat: Update enchantment limits for improved gameplay balance

* refactor: Remove limited enchantment slots feature description from changelog

* feat: Implement VanillaCommand for handling various player commands

* refactor: Simplify max trades logic in InfiniteRestockManager and clean up imports in InfiniteRestockListener

* feat: Enhance enchantment feature checks and fix villager discount preservation in Infinite Restock

* chore: Bump version to 1.3.1 in dependency-reduced-pom.xml

* refactor: Remove unused onPrepareAnvil event handler from EnchantmentLimiterListener

* refactor: Update labeler.yml to use changed-files structure for better clarity

* feat: Add automated publishing workflow to Modrinth and update contributing guidelines

* refactor: Replace Math.max and Math.min with Math.clamp for page validation in openConfigGUI

* fix: Add feature enabled check in EnchantmentLimiterListener to prevent null feature access

* feat: Add player quit event handler to clean up feature data

* fix: Exclude shaded JAR files when finding the JAR file for publishing

* chore: Update changelog for version 1.3.1 with Enchantment Limiter fixes and Modrinth auto-publish workflow